@@ -1,2 +1,9 @@
+#ifndef __PLAYLIST3_H__
+#define __PLAYLIST3_H__
+
+
 void create_playlist3 ();
 void pl3_update();
+void pl3_push_statusbar_message(char *mesg);
+
+#endif
